force-app/main/default/objects/AccountSalesSegmentation__c/AccountSalesSegmentation__c.object-meta.xml
<CustomObject>
    <label>Account Sales Segmentation</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>RowNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Sales Segmentation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>