force-app/main/default/objects/AccountSalesSegmentation__c/fields/AccountBusinessDivision__c.field-meta.xml
<CustomField>
    <fullName>AccountBusinessDivision__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Business Division</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>AccountBusinessDivisions__c.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AccountBusinessDivisions__c</referenceTo>
    <relationshipLabel>Account Sales Segmentation</relationshipLabel>
    <relationshipName>Account_Sales_Segmentation</relationshipName>
    <type>Lookup</type>
</CustomField>