force-app/main/default/objects/AccountSalesSegmentation__c/fields/BusinessDivision__c.field-meta.xml
<CustomField>
    <fullName>BusinessDivision__c</fullName>
    <formula>TEXT(AccountBusinessDivision__r.BusinessDivision__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Division</label>
    <type>Text</type>
</CustomField>