force-app/main/default/objects/AccountSalesSegmentation__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Account Sales Segmentation</relationshipLabel>
    <relationshipName>Account_Sales_Segmentation</relationshipName>
    <type>Lookup</type>
</CustomField>