force-app/main/default/objects/AccountSalesSegmentation__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>ProductsClassifier__c</referenceTo>
    <relationshipLabel>Account Sales Segmentation</relationshipLabel>
    <relationshipName>Account_Sales_Segmentation</relationshipName>
    <type>Lookup</type>
</CustomField>