force-app/main/default/objects/AccountSalesSegmentation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>AccountBusinessDivision__c</columns>
    <columns>Account__c</columns>
    <columns>BusinessDivision__c</columns>
    <columns>MarketSegment__c</columns>
    <columns>Manager__c</columns>
    <columns>Active__c</columns>
    <columns>Region__c</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>